am refactor - am_configure & am_amster_templates - scripts are self-contained with better exception handling