@@ -8,6 +8,8 @@ This Ansible role is used to setup and configure [AM](https://go.forgerock.com/A
 - [Role description](#role-description)
 - [Role Variables](#role-variables)
   - [Installation](#installation)
+  - [Configure](#configure)
+  - [Manual mode](#manual-mode)
 - [Dependencies](#dependencies)
 - [Links](#links)
 
@@ -69,6 +71,114 @@ amster_am_install:
   userStoreRootSuffix: dc=bkwi,dc=NL
 ```
 
+### Configure
+
+Use `am_configure` to configure AM using Amster. To create a realm `myapp` for domain `myapp.com`
+
+```yaml
+am_configure:
+  - name: Create Suwinet realm
+    template: 103-configure_realm
+    vars:
+      realmName: myapp
+      realmAliases: '[\"myapp.nl\"]' # escape for json body
+```
+
+Each entry in the list `am_configured` will create an Amster script on the file system that will be executed by Ansible. These scripts are self-contained: each script can be run individually.
+
+```bash
+root@bkd-am:/opt/amster/amster# ls | grep s0
+s01-103-configure-realm.amster
+s02-104-create-j2ee-agent.amster
+s03-105-create-policy-set.amster
+s04-106-create-policy.amster
+s05-107-update-identity-store.amster
+s06-108-set-sessionproperties.amster
+s07-103-configure-realm.amster
+s08-107-update-identity-store.amster
+s09-108-set-sessionproperties.amster
+```
+
+`template` is above item refers to items in list `am_amster_templates`. The dict `am_amster_templates` specifies the mandatory and / or optional variables the scripts has. It can also specify additional subscripts to call as is the case for `110-create-authentication-LdapTree`
+
+```yaml
+am_amster_templates:
+  110-create-authentication-LdapTree:
+    vars: ['realmName','defaultTreeName','defaultAuthenticationService', 'primaryLDAPServer','bindUserPassword']
+    vars-optional:
+      - name: startDN
+        value: cn=Directory Manager
+      - name: dnToStartUserSearch
+        value: o=myapp,c=NL
+      - name: bindUserDN
+        value: cn=Directory Manager
+      - name: attributeUsedtoRetrieveUserProfile
+        value: uid
+      - name: attributeUsedtoSearchForAUserToBeAuthenticated
+        value: uid
+      - name: secondaryLDAPServer
+        value:
+    scripts:
+      - 110-function-delete-authentication-tree
+      - 110-function-create-authentication-tree
+      # - 110-function-load-authentication-service
+      # Set tree as default service
+      # TODO uncomment when password reset works
+```
+
+### Manual mode
+
+Amster scripts can be used manually. To enter Amster manual mode
+
+```yaml
+am_configure_manual: yes
+```
+Note: when running in manual mode the Ansible will fail at the end.
+
+For example to run the first step
+
+```bash
+root@bkd-am:/opt/amster/amster# ./amster 01-103-configure-realm.amster 
+WARNING: An illegal reflective access operation has occurred
+WARNING: Illegal reflective access by org.codehaus.groovy.reflection.CachedClass (file:/opt/amster/amster-6.5.3/amster-6.5.3.jar) to method java.lang.Object.clone()
+WARNING: Please consider reporting this to the maintainers of org.codehaus.groovy.reflection.CachedClass
+WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
+WARNING: All illegal access operations will be denied in a future release
+Amster OpenAM Shell (6.5.3 build fd13bbcf96, JVM: 11.0.4)
+Type ':help' or ':h' for help.
+--------------------------------------------------------------------------------------------------------------------------------------
+am> :load 01-103-configure-realm.amster
+===> true
+===> true
+===> true
+===> true
+===> true
+===> true
+===> true
+===> true
+===> true
+===> true
+===> true
+===> true
+===> true
+Parameters
+=========================================================
+Create realm
+=========================================================
+===> {
+    "name": "myapp",
+    "active": true,
+    "parentPath": "/",
+    "aliases": [
+        "suwinet.nl"
+    ],
+    "_rev": "369290511",
+    "_id": "L3N1d2luZXQ"
+}
+no delta, skipping realm creation/update
+===> null
+```
+
 ## Dependencies
 
 ## Links
@@ -77,3 +187,5 @@ amster_am_install:
 * [Amster 7.0.1 > User Guide > Connect to AM](https://backstage.forgerock.com/docs/amster/7/user-guide/amster-connecting.html)
 * [Using Variables in Amster Scripts](https://backstage.forgerock.com/docs/amster/7/user-guide/amster-usage-scripts.html#amster-variables-scripts)
 * [Amster 7.0.2 > Entity Reference > Realms](https://backstage.forgerock.com/docs/amster/7/entity-reference/sec-amster-entity-realms.html)
+* [Amster 7.1 > Entity Reference > WebAgents]
+https://backstage.forgerock.com/docs/amster/7.1/entity-reference/sec-amster-entity-webagents.html]
